--- a/35 DOM Element in JavaScript/index.html
+++ b/35 DOM Element in JavaScript/index.html
@@ -10,7 +10,10 @@
 	  <body>
 		
 		<div class="box" id="box">
-		 
+			<p>HTML</p>
+			<p class="addcss">Javascript</p>
+			<p>Angular</p>
+			<p>TypeScript</p>
 		</div>
 	
 		<script src="assets/js/main.js"></script>
