--- a/39 Form Submit Event/index.html
+++ b/39 Form Submit Event/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/5d62a029bf.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
@@ -25,22 +29,70 @@
           <div class="col-md-6">
             <form id="submituserdata">
               <div class="form-group">
+                <label for="name">Full Name</label>
                 <input
                   type="text"
                   name="name"
                   placeholder="Name"
                   id="name"
                   class="form-control"
+                  required
                 />
               </div>
               <div class="form-group">
+                <label for="email">Email</label>
                 <input
                   type="text"
                   name="email"
                   placeholder="email"
                   id="email"
                   class="form-control"
+                  required
                 />
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div>
+                      <label for="">Gender</label>
+                    </div>
+                    <input type="radio" name="gender" value="Male" id="male" />
+                    <label for="male">Male</label>
+                    <input
+                      type="radio"
+                      name="gender"
+                      value="Female"
+                      id="female"
+                    />
+                    <label for="Female">Female</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <div>
+                      <label for="education">Education</label>
+                    </div>
+                    <select id="education">
+                      <option value="ba">B.A.</option>
+                      <option value="bcom">B.Com.</option>
+                      <option value="bsc">B.Sc.</option>
+                      <option value="ma">M.A.</option>
+                      <option value="mcom">M.Com.</option>
+                      <option value="msc">M.Sc.</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <input
+                  type="checkbox"
+                  name="checkbox"
+                  id="terms_and_condition"
+                />
+                <label for="terms_and_condition"
+                  >Accept Term and Conditions</label
+                >
               </div>
               <input type="submit" value="submit" class="btn btn-primary" />
             </form>
@@ -49,8 +101,12 @@
             <table class="table table-bordered">
               <thead>
                 <tr>
+                  <th>Sr.No.</th>
                   <th>User Name</th>
                   <th>Email</th>
+                  <th>Gender</th>
+                  <th>Education</th>
+                  <th>Accept Term and Conditions</th>
                 </tr>
               </thead>
               <tbody id="formtable">
@@ -64,6 +120,7 @@
         </div>
       </div>
     </section>
-    <script src="/assets/js/app.js"></script>
+    <!-- <script src="/assets/js/app.js"></script> -->
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
